perf: improved contextual menu appearance

--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -136,6 +136,10 @@ body {
     display: flex;
     justify-content: center;
 
+    .tab-link {
+      min-width: 0;
+    }
+
     &.active {
       .tab-link {
         border-color: transparent;
