--- a/src/renderer/scss/themes/light-theme.scss
+++ b/src/renderer/scss/themes/light-theme.scss
@@ -219,7 +219,7 @@
         }
 
         &:hover {
-          background: $primary-color;
+          background: rgba($light-color, 15%);
         }
       }
     }
