--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -235,7 +235,7 @@
         }
 
         &:hover {
-          background: $primary-color;
+          background: rgba($light-color, 15%);
         }
       }
     }
