--- a/src/renderer/scss/themes/light-theme.scss
+++ b/src/renderer/scss/themes/light-theme.scss
@@ -98,7 +98,7 @@
   }
 
   .editor-col {
-    border-left: 2px solid darken($bg-color-light-gray, 15%);
+    border-left: 0.05rem solid darken($bg-color-light-gray, 15%);
   }
 
   .file-uploader {
