feat(UI): shortcuts info on empty query tab

--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -135,6 +135,11 @@
     background: $bg-color-light-dark;
   }
 
+  code {
+    background-color: #000;
+    color: $body-font-color-dark;
+  }
+
   // Antares
   .workspace {
     .workspace-explorebar {
