feat(UI): automatic scroll to selected tab element in left bar

--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -167,7 +167,8 @@
         }
 
         .menu-item {
-          &:hover {
+          &:hover,
+          &.selected {
             color: $body-font-color-dark;
             background: rgba($color: #fff, $alpha: 0.05);
           }
