perf(UI): visual improvements of tables

--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -209,7 +209,7 @@ option:checked {
   cursor: pointer;
 
   &.small-select {
-    height: 1rem;
+    height: 21px;
     font-size: 0.7rem;
     padding: 1px 0.4rem 0;
   }
