--- a/src/renderer/scss/themes/light-theme.scss
+++ b/src/renderer/scss/themes/light-theme.scss
@@ -216,11 +216,29 @@
       .table {
         .th {
           background: $body-bg;
-          border-color: rgba($bg-color-light-dark, 0.5);
+          border-color: lighten($bg-color-light-gray, 2%);
         }
 
-        .td {
-          border-color: rgba($bg-color-light-dark, 0.5);
+        .tr {
+          background-color: lighten($bg-color-light-gray, 2%);
+
+          .td:first-child {
+            border-left: 2px solid $body-bg;
+          }
+
+          .td {
+            border-color: $body-bg;
+
+            &:focus {
+              box-shadow: inset 0 0 0 2px lighten($body-font-color, 10%);
+              background-color: $body-font-color-dark;
+            }
+
+            .editable-field {
+              box-shadow: inset 0 0 0 2px lighten($body-font-color, 10%);
+              background-color: $body-font-color-dark;
+            }
+          }
         }
       }
     }
