feat(PostgreSQL): enable/disable triggers from contextual menu

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -70,6 +70,7 @@
     "bytea": $blob-color,
     "enum": $enum-color,
     "set": $enum-color,
+    "bool": $enum-color,
     "boolean": $enum-color,
     "interval": $array-color,
     "array": $array-color,
