refactor: prefix to internal rows id

--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -142,7 +142,7 @@
 
   code {
     background-color: #000;
-    color: $body-font-color-dark;
+    color: rgba($body-font-color-dark, 0.7);
   }
 
   // Antares
