feat(SQLite): connection add/edit masks

--- a/src/renderer/scss/_db-icons.scss
+++ b/src/renderer/scss/_db-icons.scss
@@ -20,6 +20,10 @@
     background-image: url("../images/svg/pg.svg");
   }
 
+  &.dbi-sqlite { 
+    background-image: url("../images/svg/sqlite.svg");
+  }
+
   &.dbi-oracledb {
     background-image: url("../images/svg/oracledb.svg");
   }
