perf(SQLite): improvements in data visualization

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -17,10 +17,12 @@
   (
     "char": $string-color,
     "varchar": $string-color,
+    "longvarchar": $string-color,
     "text": $string-color,
     "tinytext": $string-color,
     "mediumtext": $string-color,
     "longtext": $string-color,
+    "string": $string-color,
     "json": $string-color,
     "name": $string-color,
     "character": $string-color,
@@ -50,6 +52,7 @@
     "oid": $number-color,
     "xid": $number-color,
     "money": $number-color,
+    "number": $number-color,
     "datetime": $date-color,
     "date": $date-color,
     "time": $date-color,
