feat: POINT field support

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -81,6 +81,7 @@
     "tsvector": $array-color,
     "tsquery": $array-color,
     "pg_node_tree": $array-color,
+    "point": $array-color,
     "aclitem": $array-color,
     "unknown": $unknown-color,
   )
