feat(MySQL): support to LINESTRING, POLYGON and GEOMETRY fields

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -82,6 +82,9 @@
     "tsquery": $array-color,
     "pg_node_tree": $array-color,
     "point": $array-color,
+    "linestring": $array-color,
+    "polygon": $array-color,
+    "geometry": $array-color,
     "aclitem": $array-color,
     "unknown": $unknown-color,
   )
