--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -81,6 +81,15 @@
     "tsvector": $array-color,
     "tsquery": $array-color,
     "pg_node_tree": $array-color,
+    "point": $array-color,
+    "linestring": $array-color,
+    "polygon": $array-color,
+    "geometry": $array-color,
+    "multipoint": $array-color,
+    "multilinestring": $array-color,
+    "multipolygon": $array-color,
+    "geomcollection": $array-color,
+    "geometrycollection": $array-color,
     "aclitem": $array-color,
     "unknown": $unknown-color,
   )
