--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -167,11 +167,15 @@ option:checked {
   }
   
   .modal-overlay{
-    background: rgba( 255, 255, 255, 0.1 );
+    background: rgba( 255, 255, 255, 0.1);
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  }
+}
+
+#wrapper:not(.no-blur){
+  .modal-overlay{
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
   }
 }
 
