--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -121,6 +121,15 @@
     border-color: $primary-color;
   }
 
+  .form-select {
+    .select {
+      &__list-wrapper {
+        border-color: $bg-color-gray;
+        background-color: $bg-color-light-dark;
+      }
+    }
+  }
+
   .form-input[readonly] {
     background-color: $bg-color-dark;
     cursor: default;
@@ -232,7 +241,7 @@
       }
     }
   }
-  
+
   .connection-panel {
     .panel {
       background: rgba($bg-color-light-dark, 50%);
@@ -240,9 +249,7 @@
   }
 
   .bg-checkered {
-    background-image:
-      linear-gradient(to right, rgba(192, 192, 192, 0.75), rgba(192, 192, 192, 0.75)),
-      linear-gradient(to right, black 50%, white 50%),
+    background-image: linear-gradient(to right, rgba(192, 192, 192, 0.75), rgba(192, 192, 192, 0.75)), linear-gradient(to right, black 50%, white 50%),
       linear-gradient(to bottom, black 50%, white 50%);
     background-blend-mode: normal, difference, normal;
     background-size: 2em 2em;
