--- a/src/renderer/scss/themes/light-theme.scss
+++ b/src/renderer/scss/themes/light-theme.scss
@@ -24,6 +24,11 @@
       background-color: $body-bg;
     }
 
+    &__group {
+      background: $bg-color-light-gray;
+      color: $unknown-color;
+    }
+
     &__option--highlight {
       color: $light-color;
     }
