--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -318,6 +318,7 @@ option:checked {
 }
 
 .select__list-wrapper {
+  z-index: 401 !important;
   border: 1px solid transparent;
   border-radius: $border-radius;
   box-shadow: 0px 8px 17px 0px rgba(0, 0, 0, 0.2), 0px 6px 20px 0px rgba(0, 0, 0, 0.19);
