--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -298,7 +298,7 @@ option:checked {
   }
 
   &.select {
-    &.select-open {
+    &.select--open {
       border-color: $primary-color !important;
       @include control-shadow();
     }
