--- a/src/renderer/scss/themes/light-theme.scss
+++ b/src/renderer/scss/themes/light-theme.scss
@@ -252,7 +252,8 @@
         .td {
           border-color: $body-bg;
 
-          &:focus {
+          &:focus,
+          &.selected {
             box-shadow: inset 0 0 0 2px lighten($body-font-color, 10%);
             background-color: $body-font-color-dark;
           }
