perf(Linux): title bar improvements

--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -27,4 +27,14 @@ $titlebar-height: 1.5rem;
 $settingbar-width: 3rem;
 $explorebar-width: 14rem;
 $footer-height: 1.5rem;
-$excluding-size: $footer-height + $titlebar-height;
+
+@function get-excluding-size(){
+   @if $platform == linux{
+      @return $footer-height;
+   }
+   @else {
+      @return $footer-height + $titlebar-height;
+   }
+}
+
+$excluding-size: get-excluding-size();
