feat: connections sorted by last usage by default and option to pin them

--- a/src/renderer/scss/_db-icons.scss
+++ b/src/renderer/scss/_db-icons.scss
@@ -3,6 +3,7 @@
   width: 42px;
   height: 42px;
   background-size: cover;
+  position: relative;
 
   &.dbi-mysql {
     background-image: url("../images/svg/mysql.svg");
