--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -356,6 +356,16 @@ option:checked {
 .accordion-body {
   max-height: 5000rem !important;
 }
+.btn {
+  &:focus{
+    box-shadow: 0 0 3px 1px rgba($primary-color, 90%);
+  }
+
+  &.btn-success:focus {
+    border-color: $primary-color;
+    box-shadow: 0 0 3px 1px rgba($primary-color, 90%);
+  }
+}
 
 .btn-group {
   flex-wrap: nowrap;
