--- a/src/renderer/scss/themes/light-theme.scss
+++ b/src/renderer/scss/themes/light-theme.scss
@@ -222,6 +222,10 @@
 
         .table-size {
           opacity: 0.4;
+          
+          &:hover {
+            opacity: 1;
+          }
         }
       }
     }
