--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -308,6 +308,13 @@
   .query-console {
     border-top: 1px solid #444;
     background-color: $bg-color-dark;
+    
+    .query-console-log {
+      &:hover,
+      &:focus {
+         background: $bg-color-gray;
+      }
+   }
   }
 
   .tile {
