--- a/src/renderer/scss/themes/light-theme.scss
+++ b/src/renderer/scss/themes/light-theme.scss
@@ -128,6 +128,18 @@
     }
   }
 
+  .query-console {
+    border-top: 1px solid darken($bg-color-light-gray, 15%);
+    background-color: $bg-color-light;
+    
+    .query-console-log {
+      &:hover,
+      &:focus {
+         background: $bg-color-light-gray;
+      }
+   }
+  }
+
   #titlebar {
     background: $bg-color-light;
     box-shadow: 0 0 1px 0 #000;
