chore: suppress some stylelint warns

--- a/src/renderer/scss/_fake-tables.scss
+++ b/src/renderer/scss/_fake-tables.scss
@@ -13,7 +13,7 @@
     display: table-row;
   }
 
-  // Scollable tables
+  /* Scollable tables */
   &.table-scroll {
     display: block;
     overflow-x: auto;
