feat: ability to add new shortcuts

--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -163,7 +163,8 @@
   }
 
   code {
-    background-color: #000;
+    background-color: #111;
+    border: 1px solid #444;
     color: rgba($body-font-color-dark, 0.7);
   }
 
