--- a/src/renderer/scss/themes/light-theme.scss
+++ b/src/renderer/scss/themes/light-theme.scss
@@ -209,6 +209,11 @@
     }
   }
 
+  code {
+    background-color: #eee;
+    border: 1px solid #ddd;
+  }
+
   .workspace {
     .workspace-explorebar {
       background: $bg-color-light-gray;
