fix: error joining tables with different schema

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -63,6 +63,7 @@
     "mediumblob": $blob-color,
     "medium_blob": $blob-color,
     "longblob": $blob-color,
+    "long_blob": $blob-color,
     "bytea": $blob-color,
     "enum": $enum-color,
     "set": $enum-color,
