initial firebird commit

--- a/src/renderer/scss/_db-icons.scss
+++ b/src/renderer/scss/_db-icons.scss
@@ -25,6 +25,10 @@
     background-image: url("../images/svg/sqlite.svg");
   }
 
+  &.dbi-firebird {
+    background-image: url("../images/svg/firebird.svg");
+  }
+
   &.dbi-oracledb {
     background-image: url("../images/svg/oracledb.svg");
   }
