feat(Firebird SQL): support to blob fields

--- a/src/renderer/scss/_table-keys.scss
+++ b/src/renderer/scss/_table-keys.scss
@@ -17,9 +17,12 @@
 
   &.key-mul,
   &.key-INDEX,
-  &.key-fk,
   &.key-KEY {
     color: limegreen;
+  }
+
+  &.key-fk {
+    color: chocolate;
   }
 
   &.key-FULLTEXT {
