feat(UI): folders implementation

--- a/src/renderer/scss/_transitions.scss
+++ b/src/renderer/scss/_transitions.scss
@@ -43,6 +43,14 @@
   animation: jump-down-in 0.2s reverse;
 }
 
+.flip-list-move {
+  transition: transform 0.5s;
+}
+
+.no-move {
+  transition: transform 0s;
+}
+
 .pulse {
   animation-name: pulse;
   animation-duration: 2s;
