fix: white background dragging connections or tabs on Linux, fixes #486

--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -209,6 +209,8 @@
         background: $bg-color-light-dark;
 
         .tab-item {
+          background: $bg-color-light-dark;
+
           > a {
             color: $body-font-color-dark;
           }
