feat(SQLite): added support to INTEGER UNSIGNED

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -38,6 +38,7 @@
     "bigint": $number-color,
     "newdecimal": $number-color,
     "integer": $number-color,
+    "integer_unsigned": $number-color,
     "numeric": $number-color,
     "smallserial": $number-color,
     "serial": $number-color,
