refactor(translation): complete refactor of translations structure

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -10,6 +10,7 @@
   (
     "char": $string-color,
     "varchar": $string-color,
+    "nvarchar": $string-color,
     "longvarchar": $string-color,
     "text": $string-color,
     "tinytext": $string-color,
