perf: migration from font icons to svg icons

--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -295,6 +295,12 @@ option:checked {
   }
 }
 
+.has-icon-left svg.form-icon,
+.has-icon-right svg.form-icon {
+  width: auto;
+  height: auto;
+}
+
 .form-select {
   cursor: pointer;
 
