refactor: removed icon fonts in ace editor

--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -5,7 +5,7 @@
 @import "data-types";
 @import "table-keys";
 @import "fake-tables";
-@import "mdi-additions";
+@import "editor-icons";
 @import "db-icons";
 @import "themes/dark-theme";
 @import "themes/light-theme";
